--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 
 
         <button id="submit" onclick="submitEquation()">A/C</button>
-        <script src="app.js"></script>
+        <script type="text/javascript" src="js\app.js"></script>
     </body>
 </html>
