--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <section>
             <div class="calculator-grid">
                 <div id="display">
-                    <div id="prev-display">prev</div>
-                    <div id="current-display">current</div>
+                    <div id="prev-display"></div>
+                    <div id="current-display"></div>
                 </div>
                 <div class="buttons">
                     <button>AC</button>
