--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
         <meta charset="utf-8">
         <title>Calculator</title>
         <meta content="width=device-width, initial-scale=1" name="viewport" />
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
         <link href="css\styles.css" rel="stylesheet">
     </head>
     <body>  
